--- a/app.json
+++ b/app.json
@@ -2,6 +2,6 @@
   "name": "ChatGPT Unblocked",
   "description": "ChatGPT 3 Unblocked",
   "repository": "https://github.com/TamoghnaK13/chatgpt-clone",
-  "logo": "https://chatgpt-sumit.up.railway.app/favicon/apple-touch-icon.png",
+  "logo": "https://yt3.ggpht.com/a/AGF-l7_v51OdQMsXHr-f0canebdaj0d3NtQmM5nhJA=s900-c-k-c0xffffffff-no-rj-mo",
   "keywords": ["CHatGPT", "GPT3"]
 }
