--- a/app.json
+++ b/app.json
@@ -4,4 +4,8 @@
   "repository": "https://github.com/TamoghnaK13/chatgpt-clone",
   "logo": "https://yt3.ggpht.com/a/AGF-l7_v51OdQMsXHr-f0canebdaj0d3NtQmM5nhJA=s900-c-k-c0xffffffff-no-rj-mo",
   "keywords": ["CHatGPT", "GPT3"]
+  "version": "1.0.0",
+  "engines": {
+    "node": "18.x"
+  }
 }
